Pass arguments to sassc

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "articles": "node bin/articles.js",
     "blosxom": "node bin/blosxom.js",
-    "css": "node bin/sassc.js && node bin/postcss.js && cp -aux tmp/* dist/styles/",
+    "css": "node bin/sassc.js --precision=3 && node bin/postcss.js && cp -aux tmp/* dist/styles/",
     "deploy": "cd dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js && cp src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
