Add clean and index command

--- a/package.json
+++ b/package.json
@@ -38,18 +38,20 @@
   "scripts": {
     "articles": "node bin/articles.js",
     "blosxom": "node bin/blosxom.js",
+    "clear": "rm -rf tmp/*",
     "css": "node bin/sassc.js --precision=3 && node bin/postcss.js && cp -aux tmp/* dist/styles/",
     "deploy": "cd dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js && cp src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
+    "index": "node bin/feedmix.js && node bin/sitemap.js",
     "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/",
-    "postarticles": "node bin/generate.js --blog && node bin/feedmix.js && node bin/sitemap.js",
+    "postarticles": "node bin/generate.js --blog && npm run index",
     "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "postcss": "node bin/styleguide.js",
-    "posthtml": "node bin/feedmix.js && node bin/sitemap.js",
-    "precss": "rm -rf tmp/*",
-    "preimg": "rm -rf tmp/*",
-    "prejs": "rm -rf tmp/*",
+    "posthtml": "npm run index",
+    "precss": "npm run clear",
+    "preimg": "npm run clear",
+    "prejs": "npm run clear",
     "preview": "node bin/preview.js",
     "start": "http-server dist/ -o",
     "static": "cp src/.nojekyll src/CNAME src/404.html dist/",
