--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mustache": "^2.2.1",
     "pit-ro": "0.0.1",
     "postcss": "^5.0.19",
+    "postcss-round-float": "^0.1.0",
     "progress": "^1.1.8",
     "request": "^2.57.0",
     "sprintf": "^0.1.3",
@@ -37,7 +38,7 @@
     "articles": "node bin/articles.js",
     "blosxom": "node bin/blosxom.js",
     "clear": "rm -rf tmp/*",
-    "css": "node bin/sassc.js --precision=3 && node bin/postcss.js && cp -aux tmp/* dist/styles/",
+    "css": "node bin/sassc.js && node bin/postcss.js && cp -aux tmp/* dist/styles/",
     "deploy": "cd dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "html": "node bin/generate.js && cp src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
