--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "html": "node bin/generate.js && cp src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "index": "node bin/feedmix.js && node bin/sitemap.js",
-    "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* dist/scripts/ && cp -aux node_modules/unutm/build/unutm.* dist/scripts/ && cp -aux node_modules/@hail2u/abbread/dist/abbread.* dist/scripts/",
+    "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* node_modules/@hail2u/abbread/dist/abbread.* node_modules/unutm/build/unutm.* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && npm run index",
     "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "postcss": "node bin/styleguide.js",
