--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "clear": "rm -rf tmp/*",
     "css": "node bin/sassc.js && node bin/postcss.js && cp -aux tmp/* dist/styles/",
     "deploy": "cd dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
-    "html": "node bin/generate.js && cp src/html/documents/*.html dist/documents/",
+    "html": "node bin/generate.js && cp -aux src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "index": "node bin/feedmix.js && node bin/sitemap.js",
-    "js": "cp src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* node_modules/@hail2u/abbread/dist/abbread.* node_modules/unutm/build/unutm.* dist/scripts/",
+    "js": "cp -aux src/js/*.js tmp/ && node bin/uglifyjs.js && cp -aux tmp/* node_modules/@hail2u/abbread/dist/abbread.* node_modules/unutm/build/unutm.* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && npm run index",
     "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "postcss": "node bin/styleguide.js",
@@ -54,7 +54,7 @@
     "prejs": "npm run clear",
     "preview": "node bin/preview.js",
     "start": "http-server dist/ -o",
-    "static": "cp src/.nojekyll src/CNAME src/404.html dist/",
+    "static": "cp -aux src/.nojekyll src/CNAME src/404.html dist/",
     "test": "scss-lint src/css/**/*.scss && eslint bin/ src/js/",
     "upload": "node bin/upload.js"
   }
