--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "prejs": "npm run clear",
     "preview": "node bin/preview.js",
     "start": "http-server dist/ -o",
-    "static": "cp -aux src/.nojekyll src/CNAME src/404.html dist/",
+    "static": "cp -aux src/.nojekyll src/CNAME src/robots.txt dist/",
     "test": "scss-lint src/css/**/*.scss && eslint bin/ src/js/",
     "upload": "node bin/upload.js"
   }
