--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-mqpacker": "^5.0.1",
     "csswring": "^5.0.0",
     "feedmix": "^1.0.0",
+    "google-closure-compiler-js": "^20160828.0.1",
     "html-minifier": "^3.0.2",
     "http-server": "^0.9.0",
     "marked": "^0.3.4",
@@ -24,7 +25,6 @@
     "progress": "^1.1.8",
     "request": "^2.57.0",
     "sprintf": "^0.1.3",
-    "uglify-js": "^2.6.2",
     "unutm": "^0.2.4",
     "which": "^1.0.8",
     "xml2js": "^0.4.1"
@@ -44,7 +44,7 @@
     "html": "node bin/generate.js && cp -aux src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "index": "node bin/feedmix.js && node bin/sitemap.js",
-    "js": "cp -aux src/js/*.js tmp/ && node bin/uglifyjs.js && cd node_modules/ && cp -aux ../tmp/* @hail2u/abbread/dist/abbread.* unutm/build/unutm.* ../dist/scripts/",
+    "js": "cp -aux src/js/*.js tmp/ && node bin/closure-compiler.js && cd node_modules/ && cp -aux ../tmp/* @hail2u/abbread/dist/abbread.* unutm/build/unutm.* ../dist/scripts/",
     "postarticles": "node bin/generate.js --blog && npm run index",
     "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "postcss": "node bin/styleguide.js",
