Be sure to reflect “Style Guide”

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "js": "cp -aux src/js/*.js tmp/ && node bin/closure-compiler.js && cd node_modules/ && cp -aux ../tmp/* @hail2u/abbread/dist/abbread.* unutm/build/unutm.* ../dist/scripts/",
     "postarticles": "node bin/generate.js --blog && npm run index",
     "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
-    "postcss": "node bin/styleguide.js",
+    "postcss": "node bin/style-guide.js",
     "posthtml": "npm run index",
     "precss": "npm run clear",
     "preimg": "npm run clear",
