--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "preview": "node bin/preview.js",
     "start": "http-server dist/ -o",
     "static": "cp -aux src/.nojekyll src/CNAME src/robots.txt dist/",
-    "test": "scss-lint src/css/**/*.scss && eslint bin/ src/js/",
+    "test": "stylelint --syntax scss \"src/css/**/*.scss\" && eslint bin/ src/js/",
     "upload": "node bin/upload.js"
   }
 }
