--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hail2u.net",
-  "description": "I write what I learned & what is possible on the WWW from Japan.",
+  "description": "Here is a decent document, a simple translation, and a weblog article about web development. These are written by Kyo Nagashima.",
   "version": "6.99.4",
   "author": "Kyo Nagashima <hail2u@gmail.com> (https://kyonagashima.com/)",
   "bugs": {
