Import npm version site scripts

--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "url": "https://github.com/hail2u/hail2u.net/issues"
   },
   "devDependencies": {
-    "@hail2u/abbread": "^0.1.0",
-    "@hail2u/ellipsis-title": "^0.1.0",
     "async": "^2.0.1",
     "css-mqpacker": "^5.0.1",
     "csswring": "^5.0.0",
@@ -26,7 +24,6 @@
     "progress": "^1.1.8",
     "request": "^2.57.0",
     "sprintf": "^0.1.3",
-    "unutm": "^0.2.4",
     "which": "^1.0.8",
     "xml2js": "^0.4.1"
   },
@@ -45,7 +42,7 @@
     "html": "node bin/generate.js && cp -aux src/html/documents/*.html dist/documents/",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico && cp -aux src/img/* dist/images/",
     "index": "node bin/feedmix.js && node bin/sitemap.js",
-    "js": "cp -aux src/js/*.js tmp/ && node bin/closure-compiler.js && cd node_modules/ && cp -aux ../tmp/* @hail2u/abbread/dist/abbread.* @hail2u/ellipsis-title/dist/ellipsis-title.* unutm/build/unutm.* ../dist/scripts/",
+    "js": "cp -aux src/js/*.js tmp/ && node bin/closure-compiler.js && cp -aux tmp/* dist/scripts/",
     "postarticles": "node bin/generate.js --blog && npm run index",
     "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "postcss": "node bin/style-guide.js",
