Revert "Remove which dependency"
This reverts commit 23fa2cbf8fc2430009594b14db7f0bd940a5a981.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^5.0.19",
     "postcss-round-float": "^0.1.0",
     "sprintf": "^0.1.3",
+    "which": "^1.0.8",
     "xml2js": "^0.4.1"
   },
   "homepage": "https://hail2u.net/",
