--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "preview": "node bin/preview.js",
     "start": "http-server dist/ -o",
     "static": "cp -aux src/.nojekyll src/CNAME src/robots.txt dist/",
-    "test": "htmlhint src/css/test.html \"src/html/documents/**/*.html\" && stylelint --syntax scss \"src/css/**/*.scss\" && eslint bin/ src/js/",
+    "test": "npm run test_html && npm run test_css && npm run test_js",
+    "test_css": "stylelint --syntax scss \"src/css/**/*.scss\"",
+    "test_html": "htmlhint src/css/test.html \"src/html/documents/**/*.html\"",
+    "test_js": "eslint bin/ src/js/",
     "upload": "node bin/upload.js"
   }
 }
