Test before build

--- a/package.json
+++ b/package.json
@@ -36,17 +36,18 @@
     "blosxom": "node bin/blosxom.js",
     "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "clear": "rm -rf tmp/*",
-    "precss": "npm run clear",
+    "precss": "npm run test_css && npm run clear",
     "css": "node bin/sassc.js && node bin/postcss.js",
     "postcss": "cp -aux tmp/* dist/styles/ && node bin/style-guide.js",
     "deploy": "cd dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
+    "prehtml": "npm run test_html",
     "html": "node bin/generate.js && cp -aux src/html/documents/*.html dist/documents/",
     "posthtml": "npm run index",
     "preimg": "npm run clear",
     "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico",
     "postimg": "cp -aux src/img/* dist/images/",
     "index": "node bin/feedmix.js && node bin/sitemap.js",
-    "prejs": "npm run clear && cp -aux src/js/*.js tmp/",
+    "prejs": "npm run test_js && npm run clear && cp -aux src/js/*.js tmp/",
     "js": "node bin/closure-compiler.js",
     "postjs": "cp -aux tmp/* dist/scripts/",
     "preview": "node bin/preview.js",
