--- a/package.json
+++ b/package.json
@@ -31,32 +31,32 @@
     "url": "https://github.com/hail2u/hail2u.net.git"
   },
   "scripts": {
-    "articles": "node bin/articles.js",
-    "postarticles": "node bin/generate.js --blog && npm run index",
-    "blosxom": "node bin/blosxom.js",
-    "postblosxom": "git add -- src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
-    "clear": "rm -rf tmp/*",
+    "articles": "node ./bin/articles.js",
+    "postarticles": "node ./bin/generate.js --blog && npm run index",
+    "blosxom": "node ./bin/blosxom.js",
+    "postblosxom": "git add -- ./src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
+    "clear": "rm -rf ./tmp/*",
     "precss": "npm run test_css && npm run clear",
-    "css": "node bin/sassc.js && node bin/postcss.js",
-    "postcss": "cp -aux tmp/* dist/styles/ && node bin/style-guide.js",
-    "deploy": "cd dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
+    "css": "node ./bin/sassc.js && node ./bin/postcss.js",
+    "postcss": "cp -aux ./tmp/* ./dist/styles/ && node ./bin/style-guide.js",
+    "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
-    "html": "node bin/generate.js && cp -aux src/html/documents/*.html dist/documents/",
+    "html": "node ./bin/generate.js && cp -aux ./src/html/documents/*.html ./dist/documents/",
     "posthtml": "npm run index",
     "preimg": "npm run clear",
-    "img": "node bin/rasterize.js && convert -quiet tmp/favicon-256.png tmp/favicon-64.png tmp/favicon-32.png tmp/favicon-16.png dist/favicon.ico",
-    "postimg": "cp -aux src/img/* dist/images/",
-    "index": "node bin/feedmix.js && node bin/sitemap.js",
-    "prejs": "npm run test_js && npm run clear && cp -aux src/js/*.js tmp/",
-    "js": "node bin/closure-compiler.js",
-    "postjs": "cp -aux tmp/* dist/scripts/",
-    "preview": "node bin/preview.js",
-    "start": "http-server dist/ -o",
-    "static": "cp -aux src/.nojekyll src/CNAME src/robots.txt dist/",
+    "img": "node ./bin/rasterize.js && convert -quiet ./tmp/favicon-256.png ./tmp/favicon-64.png ./tmp/favicon-32.png ./tmp/favicon-16.png ./dist/favicon.ico",
+    "postimg": "cp -aux ./src/img/* ./dist/images/",
+    "index": "node ./bin/feedmix.js && node ./bin/sitemap.js",
+    "prejs": "npm run test_js && npm run clear && cp -aux ./src/js/*.js ./tmp/",
+    "js": "node ./bin/closure-compiler.js",
+    "postjs": "cp -aux ./tmp/* ./dist/scripts/",
+    "preview": "node ./bin/preview.js",
+    "start": "http-server ./dist/ -o",
+    "static": "cp -aux ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
     "test": "npm run test_html && npm run test_css && npm run test_js",
-    "test_css": "stylelint --syntax scss \"src/css/**/*.scss\"",
-    "test_html": "htmlhint src/css/test.html \"src/html/documents/**/*.html\"",
-    "test_js": "eslint bin/ src/js/",
-    "upload": "node bin/upload.js"
+    "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
+    "test_html": "htmlhint ./src/css/test.html \"./src/html/documents/**/*.html\"",
+    "test_js": "eslint ./bin/ ./src/js/",
+    "upload": "node ./bin/upload.js"
   }
 }
