--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "html": "node ./bin/generate.js && cp -aux ./src/html/documents/*.html ./dist/documents/",
     "posthtml": "npm run index",
     "preimg": "npm run clear",
-    "img": "node ./bin/rasterize.js && convert -quiet ./tmp/favicon-256.png ./tmp/favicon-64.png ./tmp/favicon-32.png ./tmp/favicon-16.png ./dist/favicon.ico",
+    "img": "node ./bin/rasterize.js && node ./bin/favicon.js",
     "postimg": "cp -aux ./src/img/* ./dist/images/",
     "index": "node ./bin/feedmix.js && node ./bin/sitemap.js",
     "prejs": "npm run test_js && npm run clear && cp -aux ./src/js/*.js ./tmp/",
