--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "css-mqpacker": "^5.0.1",
     "csswring": "^5.0.0",
     "feedmix": "^1.0.0",
+    "fs-extra": "^1.0.0",
     "google-closure-compiler-js": "^20161201.0.0",
     "html-minifier": "^3.1.0",
     "http-server": "^0.9.0",
     "marked": "^0.3.4",
     "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
     "mustache": "^2.2.1",
     "pit-ro": "0.0.1",
     "postcss": "^5.0.19",
