Fix empty script name

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/hail2u/hail2u.net.git"
   },
   "scripts": {
-    "articles": "node ./bin/.js",
+    "articles": "node ./bin/articles.js",
     "postarticles": "node ./bin/html.js --blog && npm run index",
     "blog": "node ./bin/blog.js",
     "postblog": "git add -- ./src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
