Build all HTML files

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "articles": "node ./bin/articles.js",
-    "postarticles": "node ./bin/html.js --blog && npm run index",
+    "postarticles": "node ./bin/html.js && npm run index",
     "blog": "node ./bin/blog.js",
     "postblog": "git add -- ./src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "clear": "rm -rf ./tmp/*",
