Copy HTML files on post command

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "postcss": "cp -aux ./tmp/* ./dist/styles/ && node ./bin/style-guide.js",
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
-    "html": "node ./bin/html.js && cp -aux ./src/html/documents/*.html ./dist/documents/",
-    "posthtml": "npm run index",
+    "html": "node ./bin/html.js",
+    "posthtml": "cp -aux ./src/html/documents/*.html ./dist/documents/ && npm run index",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
     "postimg": "cp -aux ./src/img/* ./dist/images/",
