Rename to js.js

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "postimg": "cp -aux ./src/img/* ./dist/images/",
     "index": "node ./bin/feed.js && node ./bin/sitemap.js",
     "prejs": "npm run test_js && npm run clear && cp -aux ./src/js/*.js ./tmp/",
-    "js": "node ./bin/minjs.js",
+    "js": "node ./bin/js.js",
     "postjs": "cp -aux ./tmp/* ./dist/scripts/",
     "preview": "node ./bin/preview.js",
     "public": "node ./bin/public.js",
