Public files via CLI

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "js": "node ./bin/js.js",
     "postjs": "cp -aux ./tmp/* ./dist/scripts/",
     "preview": "node ./bin/preview.js",
-    "public": "node ./bin/public.js",
+    "public": "cd ./dist/ && git add",
+    "postpublic": "cd ./dist/ && git commit \"--message=Upload\" && git push origin gh-pages",
     "start": "http-server ./dist/ -o",
     "static": "cp -aux ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
     "test": "npm run test_html && npm run test_css && npm run test_js",
