Split style-guide task

--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "clear": "rm -rf ./tmp/*",
     "precss": "npm run test_css && npm run clear",
     "css": "node ./bin/css.js",
-    "postcss": "cp -aux ./tmp/* ./dist/styles/ && node ./bin/style-guide.js",
+    "postcss": "cp -aux ./tmp/* ./dist/styles/ && npm run style-guide",
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
-    "posthtml": "cp -aux ./src/html/documents/*.html ./dist/documents/ && npm run index",
+    "posthtml": "cp -aux ./src/html/documents/*.html ./dist/documents/ && npm run style-guide && npm run index",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
     "postimg": "cp -aux ./src/img/* ./dist/images/",
@@ -55,6 +55,7 @@
     "postpublic": "cd ./dist/ && git commit \"--message=Upload\" && git push origin gh-pages",
     "start": "http-server ./dist/ -o",
     "static": "cp -aux ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
+    "style-guide": "node ./bin/style-guide.js",
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
     "test_html": "htmlhint ./src/css/test.html \"./src/html/documents/**/*.html\"",
