Copy files using -r option

--- a/package.json
+++ b/package.json
@@ -38,23 +38,23 @@
     "clear": "rm -rf ./tmp/*",
     "precss": "npm run test_css && npm run clear",
     "css": "node ./bin/css.js",
-    "postcss": "cp -aux ./tmp/* ./dist/styles/ && npm run style-guide",
+    "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style-guide",
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
-    "posthtml": "cp -aux ./src/html/documents/*.html ./dist/documents/ && npm run style-guide && npm run index",
+    "posthtml": "cp ./src/html/documents/*.html ./dist/documents/ && npm run style-guide && npm run index",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
-    "postimg": "cp -aux ./src/img/* ./dist/images/",
+    "postimg": "cp -rT ./src/img/ ./dist/images/",
     "index": "node ./bin/feed.js && node ./bin/sitemap.js",
-    "prejs": "npm run test_js && npm run clear && cp -aux ./src/js/*.js ./tmp/",
+    "prejs": "npm run test_js && npm run clear && cp -rT ./src/js/ ./tmp/",
     "js": "node ./bin/js.js",
-    "postjs": "cp -aux ./tmp/* ./dist/scripts/",
+    "postjs": "cp -rT ./tmp/ ./dist/scripts/",
     "preview": "node ./bin/preview.js",
     "public": "cd ./dist/ && git add",
     "postpublic": "cd ./dist/ && git commit \"--message=Upload\" && git push origin gh-pages",
     "start": "http-server ./dist/ -o",
-    "static": "cp -aux ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
+    "static": "cp ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
     "style-guide": "node ./bin/style-guide.js",
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
