Exclude documents from Git

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
-    "posthtml": "cp ./src/html/documents/*.html ./dist/documents/ && npm run style-guide && npm run index",
+    "posthtml": "npm run style-guide && npm run index",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
     "postimg": "cp -rT ./src/img/ ./dist/images/",
