Remove ./tmp/, then create ./tmp/

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "postarticles": "node ./bin/html.js && npm run index",
     "blog": "node ./bin/blog.js",
     "postblog": "git add -- ./src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
-    "clear": "rm -rf ./tmp/*",
+    "clear": "rm -rf ./tmp/ && mkdir ./tmp/",
     "precss": "npm run test_css && npm run clear",
     "css": "node ./bin/css.js",
     "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style-guide",
