--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "js": "node ./bin/js.js",
     "postjs": "cp -rT ./tmp/ ./dist/scripts/",
     "preview": "node ./bin/preview.js",
-    "public": "cd ./dist/ && git add",
+    "public": "node ./bin/public.js",
     "postpublic": "cd ./dist/ && git commit \"--message=Upload\" && git push origin gh-pages",
     "start": "http-server ./dist/ -o",
     "static": "cp ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
