--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "style-guide": "node ./bin/style-guide.js",
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
-    "test_html": "htmlhint ./src/css/test.html \"./src/html/documents/**/*.html\"",
+    "test_html": "htmlhint ./src/css/test.html",
     "test_js": "eslint ./bin/ ./src/js/"
   }
 }
