--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
   },
   "scripts": {
     "articles": "node ./bin/articles.js",
-    "postarticles": "node ./bin/html.js && npm run index",
+    "postarticles": "node ./bin/html.js && npm run index && npm run deploy",
     "blog": "node ./bin/blog.js",
     "postblog": "git add -- ./src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "clear": "rm -fr ./tmp/ && mkdir tmp",
     "precss": "npm run test_css && npm run clear",
     "css": "node ./bin/css.js",
-    "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style-guide",
+    "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style-guide && npm run deploy",
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
-    "posthtml": "npm run style-guide && npm run index",
+    "posthtml": "npm run style-guide && npm run index && npm run deploy",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
-    "postimg": "cp -rT ./src/img/ ./dist/images/",
+    "postimg": "cp -rT ./src/img/ ./dist/images/ && npm run deploy",
     "index": "node ./bin/feed.js && node ./bin/sitemap.js",
     "prejs": "npm run test_js && npm run clear && cp -rT ./src/js/ ./tmp/",
     "js": "node ./bin/js.js",
-    "postjs": "cp -rT ./tmp/ ./dist/scripts/",
+    "postjs": "cp -rT ./tmp/ ./dist/scripts/ && npm run deploy",
     "preview": "node ./bin/preview.js",
     "public": "node ./bin/public.js",
     "postpublic": "cd ./dist/ && git commit \"--message=Upload\" && git push origin gh-pages",
