Test generated HTML files

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
-    "posthtml": "npm run style-guide && npm run index && npm run deploy",
+    "posthtml": "npm run style-guide && npm run test_html_dist && npm run index && npm run deploy",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
     "postimg": "cp -rT ./src/img/ ./dist/images/ && npm run deploy",
@@ -59,6 +59,7 @@
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
     "test_html": "htmlhint ./src/css/test.html",
+    "test_html_dist": "htmlhint \"./dist/**/index.html\"",
     "test_js": "eslint ./bin/ ./src/js/"
   }
 }
