Retrieve weblog draft from Simplenote
Things to do:

- Cache token
- Preview without saving
- Publish

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "marked": "^0.3.4",
     "minimist": "^1.2.0",
     "mustache": "^2.2.1",
-    "pit-ro": "0.0.1",
+    "pit-ro": "^0.0.1",
     "postcss": "^5.2.11",
     "postcss-round-float": "^0.1.0",
+    "request": "^2.79.0",
     "which": "^1.0.8",
     "xml2js": "^0.4.1"
   },
