Add simplenote command

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "preview": "node ./bin/preview.js",
     "public": "node ./bin/public.js",
     "postpublic": "cd ./dist/ && git commit \"--message=Upload\" && git push origin gh-pages",
+    "presimplenote": "npm run clear",
+    "simplenote": "node ./bin/simplenote.js",
     "start": "http-server ./dist/ -o",
     "static": "cp ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
     "style-guide": "node ./bin/style-guide.js",
