--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "js": "node ./bin/js.js",
     "postjs": "cp -rT ./tmp/ ./dist/scripts/ && npm run deploy",
     "public": "node ./bin/public.js",
-    "postpublic": "cd ./dist/ && git commit \"--message=Upload\" && git push origin gh-pages",
+    "postpublic": "cd ./dist/ && git commit --message=\"Upload\" && git push origin gh-pages",
     "presimplenote": "npm run clear",
     "simplenote": "node ./bin/simplenote.js",
     "start": "http-server ./dist/ -o",
