Add post and preview scripts

--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "prejs": "npm run test_js && npm run clear && cp -rT ./src/js/ ./tmp/",
     "js": "node ./bin/js.js",
     "postjs": "cp -rT ./tmp/ ./dist/scripts/ && npm run deploy",
+    "prepost": "npm run clear",
+    "post": "node ./bin/simplenote.js --publish",
+    "prepreview": "npm run clear",
+    "preview": "node ./bin/simplenote.js",
     "public": "node ./bin/public.js",
     "postpublic": "cd ./dist/ && git commit --message=\"Upload\" && git push origin gh-pages",
-    "presimplenote": "npm run clear",
-    "simplenote": "node ./bin/simplenote.js",
     "start": "http-server ./dist/ -o",
     "static": "cp ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
     "style-guide": "node ./bin/style-guide.js",
