--- a/package.json
+++ b/package.json
@@ -64,6 +64,6 @@
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
     "test_html": "htmlhint ./src/css/test.html",
     "test_html_dist": "htmlhint \"./dist/**/index.html\"",
-    "test_js": "eslint ./bin/ ./src/js/"
+    "test_js": "eslint ./bin/ ./lib/ ./src/js/"
   }
 }
