Resolve paths inline

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "img": "node ./bin/png.js && node ./bin/favicon.js",
     "postimg": "cp -rT ./src/img/ ./dist/images/ && npm run deploy",
     "index": "node ./bin/feed.js && node ./bin/sitemap.js",
-    "prejs": "npm run test_js && npm run clear && cp -rT ./src/js/ ./tmp/",
+    "prejs": "npm run test_js && npm run clear",
     "js": "node ./bin/js.js",
     "postjs": "cp -rT ./tmp/ ./dist/scripts/ && npm run deploy",
     "prepost": "npm run clear",
