Use already defined script

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "articles": "node ./bin/articles.js",
-    "postarticles": "node ./bin/html.js && npm run index && npm run deploy",
+    "postarticles": "npm run html",
     "blog": "node ./bin/blog.js",
     "postblog": "git add -- ./src/weblog/plugins/state/ && git diff --cached --exit-code --quiet || git commit --message=\"Update cache files\"",
     "clear": "rm -fr ./tmp/ && mkdir tmp",
