--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-server": "^0.9.0",
     "marked": "^0.3.4",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "mustache": "^2.2.1",
     "pit-ro": "^0.0.1",
     "postcss": "^5.2.11",
