--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pit-ro": "^0.0.1",
     "postcss": "^5.2.11",
     "postcss-round-float": "^0.1.0",
+    "request": "^2.80.0",
     "which": "^1.0.8",
     "xml2js": "^0.4.1"
   },
