--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "css-mqpacker": "^5.0.1",
     "csswring": "^5.0.0",
     "feedmix": "^1.0.0",
+    "fs-extra": "^2.0.0",
     "google-closure-compiler-js": "^20170124.0.0",
     "html-minifier": "^3.3.0",
     "http-server": "^0.9.0",
