Don’t deploy automatically

--- a/package.json
+++ b/package.json
@@ -39,18 +39,18 @@
     "clear": "rm -fr ./tmp/ && mkdir tmp",
     "precss": "npm run test_css && npm run clear",
     "css": "node ./bin/css.js",
-    "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style-guide && npm run deploy",
+    "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style-guide",
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
-    "posthtml": "npm run style-guide && npm run test_html_dist && npm run index && npm run deploy",
+    "posthtml": "npm run style-guide && npm run test_html_dist && npm run index",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
-    "postimg": "cp -rT ./src/img/ ./dist/images/ && npm run deploy",
+    "postimg": "cp -rT ./src/img/ ./dist/images/",
     "index": "node ./bin/feed.js && node ./bin/sitemap.js",
     "prejs": "npm run test_js && npm run clear",
     "js": "node ./bin/js.js",
-    "postjs": "cp -rT ./tmp/ ./dist/scripts/ && npm run deploy",
+    "postjs": "cp -rT ./tmp/ ./dist/scripts/",
     "prepost": "npm run clear",
     "post": "node ./bin/simplenote.js --publish",
     "prepreview": "npm run clear",
