--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
     "test_html": "htmlhint ./src/css/test.html",
     "test_html_dist": "htmlhint \"./dist/**/index.html\" \"./dist/documents/**/*.html\"",
-    "test_js": "eslint ./bin/ ./lib/ ./src/js/"
+    "test_js": "eslint ./bin/ ./lib/ ./src/js/",
+    "preupdate": "npm run clear",
+    "update": "node ./bin/update.js"
   }
 }
