Test weblog entry

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
     "test_html": "htmlhint ./src/css/test.html",
+    "test_html_arg": "htmlhint",
     "test_html_dist": "htmlhint \"./dist/**/index.html\" \"./dist/documents/**/*.html\"",
     "test_js": "eslint ./bin/ ./lib/ ./src/js/",
     "preupdate": "npm run clear",
