Remove useless About page

--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "clear": "rm -fr ./tmp/ && mkdir tmp",
     "precss": "npm run test_css && npm run clear",
     "css": "node ./bin/css.js",
-    "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style-guide",
+    "postcss": "cp -rT ./tmp/ ./dist/styles/",
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
     "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
-    "posthtml": "npm run style-guide && npm run test_html_dist && npm run index",
+    "posthtml": "npm run test_html && npm run index",
     "preimg": "npm run clear",
     "img": "node ./bin/png.js && node ./bin/favicon.js",
     "postimg": "cp -rT ./src/img/ ./dist/images/",
@@ -59,12 +59,10 @@
     "postpublic": "cd ./dist/ && git commit --message=\"Upload\" && git push origin gh-pages",
     "start": "http-server ./dist/ -o",
     "static": "cp ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
-    "style-guide": "node ./bin/style-guide.js",
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
-    "test_html": "htmlhint ./src/css/test.html",
+    "test_html": "htmlhint \"./dist/**/index.html\" \"./dist/documents/**/*.html\"",
     "test_html_arg": "htmlhint",
-    "test_html_dist": "htmlhint \"./dist/**/index.html\" \"./dist/documents/**/*.html\"",
     "test_js": "eslint ./bin/ ./lib/ ./src/js/",
     "preupdate": "npm run clear",
     "update": "node ./bin/update.js"
