--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "static": "cp ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
-    "test_html": "htmlhint \"./dist/**/index.html\" \"./dist/documents/**/*.html\"",
+    "test_html": "htmlhint ./src/css/test.html \"./dist/**/index.html\" \"./dist/documents/**/*.html\"",
     "test_html_arg": "htmlhint",
     "test_js": "eslint ./bin/ ./lib/ ./src/js/",
     "preupdate": "npm run clear",
