Publish Style Guide

--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "clear": "rm -fr ./tmp/ && mkdir tmp",
     "precss": "npm run test_css && npm run clear",
     "css": "node ./bin/css.js",
-    "postcss": "cp -rT ./tmp/ ./dist/styles/",
+    "postcss": "cp -rT ./tmp/ ./dist/styles/ && npm run style_guide",
     "deploy": "cd ./dist/ && git add --all && git commit --message=\"Build\" && git push origin gh-pages",
-    "prehtml": "npm run test_html",
     "html": "node ./bin/html.js",
     "posthtml": "npm run test_html && npm run index",
     "preimg": "npm run clear",
@@ -59,6 +58,7 @@
     "postpublic": "cd ./dist/ && git commit --message=\"Upload\" && git push origin gh-pages",
     "start": "http-server ./dist/ -o",
     "static": "cp ./src/.nojekyll ./src/CNAME ./src/robots.txt ./dist/",
+    "style_guide": "node ./bin/style-guide.js",
     "test": "npm run test_html && npm run test_css && npm run test_js",
     "test_css": "stylelint --syntax scss \"./src/css/**/*.scss\"",
     "test_html": "htmlhint ./src/css/test.html \"./dist/**/index.html\" \"./dist/documents/**/*.html\"",
