Copy source JS files

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "index": "node ./bin/feed.js && node ./bin/sitemap.js",
     "prejs": "npm run test_js && npm run clear",
     "js": "node ./bin/js.js",
-    "postjs": "cp -rT ./tmp/ ./dist/scripts/",
+    "postjs": "cp -rT ./src/js/ ./dist/scripts/ && cp -rT ./tmp/ ./dist/scripts/",
     "prepost": "npm run clear",
     "post": "node ./bin/simplenote.js --publish",
     "prepreview": "npm run clear",
