--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "postjs": "cp -rT ./src/js/ ./dist/scripts/ && cp -rT ./tmp/ ./dist/scripts/",
     "prepost": "npm run clear",
     "post": "node ./bin/simplenote.js --publish",
-    "postpost": "npm run deploy",
     "prepreview": "npm run clear",
     "preview": "node ./bin/simplenote.js",
     "public": "node ./bin/public.js",
@@ -65,7 +64,6 @@
     "test_html_arg": "node ./bin/test_html_arg.js",
     "test_js": "eslint ./bin/ ./lib/ ./src/js/",
     "preupdate": "npm run clear",
-    "update": "node ./bin/update.js",
-    "postupdate": "npm run deploy"
+    "update": "node ./bin/update.js"
   }
 }
