Use preview and post for script name

--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "prejs": "npm run test_js && npm run clear",
     "js": "node ./bin/js.js",
     "postjs": "cp -rT ./src/js/ ./dist/scripts/ && cp -rT ./tmp/ ./dist/scripts/",
+    "prepreview": "npm run clear",
+    "preview": "node ./bin/simplenote.js",
+    "post": "node ./bin/simplenote.js --publish",
+    "postpost": "npm run deploy",
     "public": "node ./bin/public.js",
     "postpublic": "cd ./dist/ && git commit --message=\"Upload\" && git push origin gh-pages",
-    "put": "node ./bin/simplenote.js --publish",
-    "postput": "npm run deploy",
-    "show": "node ./bin/simplenote.js",
     "start": "http-server ./dist/ -o",
     "style_guide": "node ./bin/style-guide.js",
     "test": "npm run test_html && npm run test_css && npm run test_js",
